--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,4 +27,17 @@ nav {
 .mixingBowl {
 	background-color: #424953;
 }
+.page-footer {
+	text-align: center;
+	background-color: #5c2932;
+}
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+  }
+
+  main {
+    flex: 1 0 auto;
+  }
 
