walmart modal on search

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,13 +20,18 @@ label {
 }
 
 .walmartDiv, .amazonDiv {
-	min-height: 570px;
+	display: inline-block;
+	width: 90vw;
 	margin-top: 30px;
-}
+} 
 
-.walmartCardDiv {
+ .walmartCardDiv {
 	position: relative;
 	height: auto;
+} 
+
+.walmartCard {
+	height: 500px;
 }
 
 
